--- a/client/src/components/page.module.css
+++ b/client/src/components/page.module.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   max-width: var(--max-width);
-  margin: 0 auto;
+  margin: 6rem auto;
   padding: 2rem;
 }
