--- a/client/src/components/switch.module.css
+++ b/client/src/components/switch.module.css
@@ -1,14 +1,37 @@
-.switch {
-  background: none;
+.remove {
+	background: none;
 	color: inherit;
 	border: none;
 	padding: 0;
+  margin: 0;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
+  opacity: 1;
 
   -webkit-appearance: none;
   -moz-appearance: none;
   -o-appearance: none;
   appearance: none;
+}
+
+.pos {
+  position: fixed;
+  font-size: 3rem;
+  margin: 1.5rem 3rem;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.62s linear;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s linear;
 }
